--- a/sphere_noBVH/src/Makefile
+++ b/sphere_noBVH/src/Makefile
@@ -3,7 +3,7 @@ CC=nvcc
 RTTNW.out:  mkClockMeasure.h  mkCuda.h mkPpm.h main.cu 
 	$(CC) -o gpu.out main.cu
 	$ ./gpu.out
-	$ mv *.ppm ./img
+	$ mv *.ppm ../img
 
 clean:
 	rm -rf gpu.out
